--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ data/raw/eso_system-inertia
 data/raw/smard_market-data_generation+consumption+physical-power-flow_GER
 data/raw/smard_market-data_system-stability_GER
 
-src/__pycache__
+src/__pycache__/
 tests/
 old/
