Working docker env

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,27 +1,55 @@
-# Use the official Python image as a base
-FROM python:3.10-slim
-
-# Set the working directory inside the container
-WORKDIR /workspace/
+FROM python:3.10-bookworm
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y curl && apt-get clean
+RUN rm -f /etc/apt/sources.list.d/*.list && \
+    apt-get update && apt-get install -y --no-install-recommends \
+    bash \
+    curl \
+    ca-certificates \
+    sudo \
+    git \
+    wget \
+    procps \
+    git-lfs \
+    zip \
+    unzip \
+    htop \
+    vim \
+    nano \
+    bzip2 \
+    libx11-6 \
+    build-essential \
+    libsndfile-dev \
+    software-properties-common \
+    libxrender1 \
+    xsel \
+    xclip \
+ && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
-RUN curl -sSL https://install.python-poetry.org | python3 -
+# Set up a new user named "user" with user ID 1000
+RUN useradd -m -u 1000 user \
+    && echo "user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/user \
+    && chmod 0440 /etc/sudoers.d/user
 
-# Add Poetry to PATH
-ENV PATH="/root/.local/bin:${PATH}"
+# Switch to the "user" user
+USER user
 
-# Copy the `pyproject.toml` and `poetry.lock` files
-COPY pyproject.toml poetry.lock* /workspace/
+# Set home to the user's home directory
+ENV HOME=/home/user \
+    PATH=/home/user/.local/bin:$PATH
 
-# Install dependencies with Poetry
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi
+# Set the working directory to the user's home directory
+WORKDIR $HOME/app
 
-# Copy the rest of your application code
-COPY . /workspace/
+# Install poetry
+RUN curl -sSL https://install.python-poetry.org | python3 - \
+    && poetry config virtualenvs.in-project true
 
-# Command to keep the container running
-CMD ["bash"]
+ENV POETRY_NO_INTERACTION=1 \
+    POETRY_VIRTUALENVS_IN_PROJECT=1 \
+    POETRY_VIRTUALENVS_CREATE=1
+
+# We don't copy the project files here as they will be mounted
+# through the devcontainer.json configuration
+
+CMD ["/bin/bash"]
